# orcha

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
orcha-cli/: LICENSE  README.md  pyproject.toml
orcha-cli/orcha_cli/: __init__.py  __main__.py  auth_tokens.py  cli_env.py  cli_http.py  cli_text.py  conversation_prefix.py  digest_curate.py  digest_curation.py  digest_synth.py  llm_util.py  notifier.py  secret_box.py  terminal_bridge.py
orcha-cli/orcha_cli/notifier/: __init__.py  config.py  prompts.py  runlog.py
orcha-cli/orcha_cli/templates/: docker-compose.yml.j2  project-preferences.md
orcha-cli/orcha_cli/templates/migrations/: 001_init.sql  002_wake_single_flight.sql  003_decisions.sql  004_worker_runs.sql  005_worker_run_diff.sql  006_worker_run_lines.sql  007_agent_model.sql  008_conversations.sql  009_embodiment_lease.sql  010_wake_kind_ephemeral.sql  011_preempt_yield.sql  012_resident_cold_resync.sql  013_worker_run_pid.sql  014_codex_worker_run_metadata.sql  015_task_protocol.sql  016_worker_run_kill_reason.sql  017_worker_run_stop.sql  018_agent_auto_wake.sql  019_worker_run_tokens.sql  020_container_llm_key.sql  021_container_autonomy_level.sql  022_container_model_settings.sql  023_agent_notification_state.sql  024_digest_audience.sql  025_task_message_attachments.sql  026_conversation_turn_attachments.sql  027_container_provider_keys.sql  028_request_originating_task.sql  029_close_accepted_requests.sql.pending  030_agent_event_acks.sql  030_agent_tokens.sql  030_container_protocol.sql  030_scheduled_tasks.sql  (+6 more)
(+459 files in other folders)
