[project]
name = "orcha-cli"
version = "0.2.0"
description = "Orcha: human-authoritative multi-agent orchestration via Claude Code skills"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Orcha contributors" }]
requires-python = ">=3.10"
# S3 §3b: the host-side live-terminal PTY/websocket bridge (`orcha terminal-bridge`) needs a
# websocket server. Imported lazily, so the rest of the CLI still runs if it's not yet installed.
dependencies = ["websockets>=12"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/open-orcha/orcha"
Issues = "https://github.com/open-orcha/orcha/issues"
Changelog = "https://github.com/open-orcha/orcha/blob/main/CHANGELOG.md"

[project.scripts]
orcha = "orcha_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "orcha_cli/**/*.py",
  "orcha_cli/templates/**",
]

[tool.hatch.build.targets.wheel]
packages = ["orcha_cli"]
